skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_tabs__help_overlay.snap
---
source: tests/snapshot_tabs.rs
expression: "common::render_model(&model)"
---
"┌ flightdeck-dashboard ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck  session demo-mixed  owner pi · %25 · /repo/demo  daemon: unknown  elapsed 2h25m  AH:1 ISS:1 WF:1  prompting:1 submitting:1 waiting:1   stale-warn 4m                                     │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Live feed │ Conversations │ Conflicts & merges (issue mode) │ Decisions │ Daemon                                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ left rail ───────────────┐┌ sessions ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ selected detail ─────────────────────────┐"
"│States                    ││Kind    State        Harness    Title                     PR/worktree               Age      Last decision        Last activit││Fix dashboard state reader                │"
"│prompting    1            ││ISS     prompting    opencode   Fix dashboard state reade PR #44 · vst-101          1h35m    cleanup-prompt       4m          ││id VST-101                                │"
"│submitting   1            ││A┌ help ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐tate prompting               │"
"│waiting      1            ││W│Flightdeck dashboard help  static                                                                                                         │nup prompt                   │"
"│                          ││ │                                                                                                                                          │                             │"
"│Merge queue               ││ │Tab             Next tab                                                                                                                  │ktrees/vst-101               │"
"│• VST-101                 ││ │Shift+Tab       Previous tab                                                                                                              │                             │"
"│• VST-102                 ││ │j / Down        Move selection down                                                                                                       │                             │"
"│                          ││ │k / Up          Move selection up                                                                                                         │                             │"
"│Conflict graph            ││ │=               Page down                                                                                                                 │                             │"
"│• VST-101 ↔ VST-102       ││ │-               Page up                                                                                                                   │o/worktrees/vst-101          │"
"│                          ││ │Home            First row                                                                                                                 │d=5 actual=7                 │"
"│                          ││ │End             Last row                                                                                                                  │                             │"
"│                          ││ │Enter           Open selected detail                                                                                                      │                             │"
"│                          ││ │/               Open filter input                                                                                                         │t → NO — sibling worktree    │"
"│                          ││ │r               Force snapshot reload                                                                                                     │                             │"
"│                          ││ │Ctrl+N          Toggle noisy activity rows                                                                                                │                             │"
"│                          ││ │Alt+M           Toggle compact layout                                                                                                     │                             │"
"│                          ││ │?               Toggle help overlay                                                                                                       │                             │"
"│                          ││ │q / Ctrl+C      Quit                                                                                                                      │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │Esc or ? closes this overlay                                                                                                              │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ │                                                                                                                                          │                             │"
"│                          ││ └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘                             │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" Tab/Shift+Tab tabs  j/k select  r reload  Ctrl+N noisy:on  / filter:off  Alt+M compact  ? help  q quit                                                                                                 "
"                                                                                                                                                                                                        "
